payflow-platform-config/overlays/staging/patch-deploy-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payflow-api
spec:
  template:
    spec:
      containers:
        - name: api
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "2"
              memory: 1Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payflow-worker
spec:
  template:
    spec:
      containers:
        - name: worker
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "2"
              memory: 1Gi
